@@ -1,0 +1,5 @@
+use strict;
+use warnings;
+use Test::Base tests => 1;
+
+BEGIN { use_ok 'WebService::Yes24::Item' }
